log
Tue 23 Apr 2024 04:32:26 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
a3f366b
Tue 23 Apr 2024 04:58:56 PM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7368f33
Tue 23 Apr 2024 06:44:22 PM UTC: 
 hashmap.c | 18 ++++++++++++++----
 1 file changed, 14 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
43cc562
Tue 23 Apr 2024 06:47:45 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
2e66fbe
Tue 23 Apr 2024 07:11:05 PM UTC: 
 hashmap.c | 24 ++++++++++++++++--------
 1 file changed, 16 insertions(+), 8 deletions(-)
 tests:  1|5
total_score: 10/70
29bbd69
Tue 23 Apr 2024 07:12:51 PM UTC: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 30/70
0480194
Tue 23 Apr 2024 07:13:34 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:55:23: error: ‘pos’ undeclared (first use in this function); did you mean ‘pow’?
   55 |   while (map->buckets[pos] != NULL && map->buckets[pos]->key != NULL)
      |                       ^~~
      |                       pow
hashmap.c:55:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
2b4cee1
Tue 23 Apr 2024 07:13:57 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:3: error: unterminated comment
   44 |   /*
      |   ^
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e7b24f8
Tue 23 Apr 2024 07:14:05 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
b33411f
Tue 23 Apr 2024 07:15:03 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 30/70
66d7600
Tue 23 Apr 2024 07:15:25 PM UTC: 
 hashmap.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  5|4
total_score: 30/70
00ead1a
Tue 23 Apr 2024 07:31:00 PM UTC: 
 hashmap.c | 31 ++++++++++++++++++-------------
 1 file changed, 18 insertions(+), 13 deletions(-)
 tests:  6|4
total_score: 30/70
bc9b2e8
